--- a/CLIENT/GUI/ui/gui_opendoc.ui
+++ b/CLIENT/GUI/ui/gui_opendoc.ui
@@ -24,6 +24,11 @@
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="ownedDocsLabel">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>My documents</string>
        </property>
@@ -65,6 +70,11 @@ QListWidget:focus{
      </item>
      <item>
       <widget class="QLabel" name="sharedDocsLabel">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Shared with me documents</string>
        </property>
