--- a/CLIENT/GUI/ui/gui_profile.ui
+++ b/CLIENT/GUI/ui/gui_profile.ui
@@ -128,6 +128,11 @@ QComboBox QAbstractItemView {
         </item>
         <item>
          <widget class="QLabel" name="titleLabel">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
@@ -177,6 +182,11 @@ QComboBox QAbstractItemView {
         </property>
         <item row="0" column="1">
          <widget class="QLabel" name="iconLabel">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
@@ -226,6 +236,11 @@ QComboBox QAbstractItemView {
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="nicknameLabel">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
@@ -284,6 +299,11 @@ QComboBox QAbstractItemView {
         </item>
         <item row="3" column="1">
          <widget class="QLabel" name="usernameLabel">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
@@ -312,6 +332,11 @@ QComboBox QAbstractItemView {
           </item>
           <item>
            <widget class="QLabel" name="usernameLabelReadonly">
+            <property name="font">
+             <font>
+              <pointsize>9</pointsize>
+             </font>
+            </property>
             <property name="cursor">
              <cursorShape>IBeamCursor</cursorShape>
             </property>
@@ -327,6 +352,11 @@ QComboBox QAbstractItemView {
         </item>
         <item row="4" column="1">
          <widget class="QLabel" name="passwordLabel">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
@@ -359,6 +389,11 @@ QComboBox QAbstractItemView {
         </item>
         <item row="5" column="1">
          <widget class="QLabel" name="repeatLabel">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="cursor">
            <cursorShape>IBeamCursor</cursorShape>
           </property>
