--- a/CLIENT/GUI/ui/gui_login.ui
+++ b/CLIENT/GUI/ui/gui_login.ui
@@ -94,7 +94,7 @@ QLineEdit:focus{
       </size>
      </property>
      <property name="text">
-      <string>I'm</string>
+      <string/>
      </property>
      <property name="placeholderText">
       <string>username</string>
@@ -110,7 +110,7 @@ QLineEdit:focus{
       </size>
      </property>
      <property name="text">
-      <string>lazy</string>
+      <string/>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
