--- a/CLIENT/GUI/connection/ui/gui_server.ui
+++ b/CLIENT/GUI/connection/ui/gui_server.ui
@@ -65,6 +65,11 @@ QLineEdit:focus{
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="descriptionLabel">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Insert server information</string>
        </property>
@@ -126,6 +131,11 @@ QLineEdit:focus{
    </item>
    <item row="3" column="1">
     <widget class="QLabel" name="addressLabel">
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Server IP address</string>
      </property>
@@ -134,12 +144,17 @@ QLineEdit:focus{
    <item row="3" column="2">
     <widget class="QLineEdit" name="addressLineEdit">
      <property name="text">
-      <string>192.168.1.9</string>
+      <string>192.168.1.2</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
     <widget class="QLabel" name="portLabel">
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Server TCP port</string>
      </property>
@@ -148,7 +163,7 @@ QLineEdit:focus{
    <item row="4" column="2">
     <widget class="QLineEdit" name="portLineEdit">
      <property name="text">
-      <string>5</string>
+      <string>56529</string>
      </property>
     </widget>
    </item>
